# HTK

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
CMake/: CMakeLists.txt  ExternalOpenCV.cmake  ExternalVTK.cmake  HTKConfig.cmake.in
Common/: CMakeLists.txt  htkIO.cxx  htkIO.h  htkMath.cxx  htkMath.h
Common/IO/: htkCommonIO.h  htkWriteOutputFile.cxx  htkWriteOutputFile.h
OpenCV/: CMakeLists.txt  htkOpenCVUtils.cxx
Tests/: CMakeLists.txt
Tests/VTK_Tests/IO/: CMakeLists.txt  htkReadImage_test.cxx
VTK/: CMakeLists.txt  htkVTKUtils.cxx  htkVTKUtils.h
VTK/IO/: htkReadImage.cxx  htkReadImage.h  htkVTKIO.h
VTK/Visu/: htkDisplayVtkDataObject.cxx  htkDisplayVtkDataObject.h  htkResliceViewerToSuperimposedVTI.cxx  htkResliceViewerToSuperimposedVTI.h  htkTakeScreenshot.cxx  htkTakeScreenshot.h  htkVTKVisu.h
